--- a/frontend/src/BootstrapNavbar.css
+++ b/frontend/src/BootstrapNavbar.css
@@ -1,15 +1,23 @@
-.polymath_logo {
-    width: 250px;
+.polymath-logo {
+  width: 250px;
+}
+
+.polymath-logo-offcanvas {
+  width: 120px;
 }
 
 .navbar {
-    font-size: 14px;
+  font-size: 14px;
 }
 
-.scroll-nav {
-    position: sticky;
-    top: 0;
-    background-color: white;
-    transition: all 300ms ease-in-out;
+.offcanvas-width {
+  width: 200px;
 }
 
+/* .offcanvas .offcanvas-end .offcanvas-md {
+    width: 250px;
+} */
+
+/* .offcanvas-horizontal-width {
+    width: 300px;
+} */
