--- a/frontend/src/NoteTimeline.css
+++ b/frontend/src/NoteTimeline.css
@@ -39,3 +39,11 @@ a {
     padding: 0;
     margin: 0;
 }
+
+/* .article-wrapper {
+    flex: display;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+} */
