--- a/frontend/src/Menu.css
+++ b/frontend/src/Menu.css
@@ -1,3 +1,6 @@
+/* import google font for list items */
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300;400&display=swap');
+
 /* Position and sizing of burger button */
 .bm-burger-button {
   position: fixed;
@@ -21,6 +24,7 @@
 .bm-cross-button {
   height: 24px;
   width: 24px;
+  margin-top: 10px;
 }
 
 /* Color/shape of close button cross */
@@ -39,9 +43,14 @@
 
 /* General sidebar styles */
 .bm-menu {
-  background: #373a47;
-  padding: 2.5em 1.5em 0;
-  font-size: 1.15em;
+  /* background: #373a47; */
+  background: white;
+  /* padding: 2.5em 1.5em 0; */
+  padding-top: 15px;
+  padding-left: 15px;
+  font-size: 22px;
+  font-family: 'Mitr', sans-serif;
+
 }
 
 /* Morph shape necessary with bubble or elastic */
@@ -58,6 +67,9 @@
 /* Individual item */
 .bm-item {
   display: inline-block;
+  padding-bottom: 42px;
+  text-decoration: none;
+  color: black;
 }
 
 /* Styling of overlay */
