--- a/frontend/src/Contents.css
+++ b/frontend/src/Contents.css
@@ -182,3 +182,13 @@ li {
   color: black;
   text-decoration: none;
 }
+
+.link-white-style-deactivate {
+  color: white;
+  text-decoration: none;
+}
+
+.link-white-style-deactivate:hover {
+  color: white;
+  text-decoration: none;
+}
