--- a/frontend/src/Contents.css
+++ b/frontend/src/Contents.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;700&family=Roboto:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500display=swap");
 
 html {
     scroll-behavior: smooth;
